@@ -91,10 +91,12 @@ test_ReadASCIIKeys(void) {
 void
 test_ReadHexKeys(void) {
 	struct key* keys = NULL;
+	const char *path = CreatePath("key-test-hex", INPUT_DIR);
 
-	TEST_ASSERT_EQUAL(3, auth_init(CreatePath("key-test-hex", INPUT_DIR), &keys));
-
+	TEST_ASSERT_NOT_NULL(path);
+	TEST_ASSERT_EQUAL(3, auth_init(path, &keys));
 	TEST_ASSERT_NOT_NULL(keys);
+	free((void *)path);
 
 	struct key* result = NULL;
 	get_key(10, &result);
